# testRPO

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/ru/iu3/fclient/: MainActivity.java  PinpadActivity.java  TransactionEvents.java
app/src/main/res/layout/: activity_pinpad.xml
gradle/wrapper/: gradle-wrapper.properties
